--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "token": "",
-    "serverID": "",
-    "roleID": "",
-    "interval": "600000"
+    "token": "MTM3OTkzODAzNDA5ODkwMTA2Mg.GMuGH7.2VAP8QdeFe5YGO1Nyz24DkvYymThurlX12Ad4U",
+    "serverID": "1356716276117934120",
+    "roleID": "1379873814816755754",
+    "interval": "5000"
 }
